NetBSD Problem Report #50822

From www@NetBSD.org  Wed Feb 17 11:54:39 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 7D15C7ABC6
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 17 Feb 2016 11:54:39 +0000 (UTC)
Message-Id: <20160217115438.9D3187ACD0@mollari.NetBSD.org>
Date: Wed, 17 Feb 2016 11:54:38 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/lib/libm/arch/i387/fenv.c: 2 * bad size in memcpy ?
X-Send-Pr-Version: www-1.0

>Number:         50822
>Category:       lib
>Synopsis:       src/lib/libm/arch/i387/fenv.c: 2 * bad size in memcpy ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Feb 17 11:55:00 +0000 2016
>Closed-Date:    Wed Feb 17 19:57:56 +0000 2016
>Last-Modified:  Wed Feb 17 19:57:56 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160216
>Organization:
>Environment:
>Description:
1.

src/lib/libm/arch/i387/fenv.c:405]: (warning) Division by result of sizeof(). memcpy() expects a size in bytes, did you intend to multiply instead?

Source code is

    memcpy(__fe_dfl_env.x87.others,
           env.x87.others,
           sizeof(__fe_dfl_env.x87.others) / sizeof(uint32_t));



Maybe better code might be

    memcpy(__fe_dfl_env.x87.others,
           env.x87.others,
           sizeof(__fe_dfl_env.x87.others));

2.


src/lib/libm/arch/i387/fenv.c:441]: (warning) Division by result of sizeof(). memcpy() expects a size in bytes, did you intend to multiply instead?

   memcpy(__fe_dfl_env.x87.others,
           env.x87.others,
           sizeof(__fe_dfl_env.x87.others) / sizeof(uint32_t));

Duplicate.



>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50822 CVS commit: src/lib/libm/arch/i387
Date: Wed, 17 Feb 2016 14:54:11 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Feb 17 19:54:11 UTC 2016

 Modified Files:
 	src/lib/libm/arch/i387: fenv.c

 Log Message:
 PR/50822: David Binderman: Fix copy length.


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/lib/libm/arch/i387/fenv.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 17 Feb 2016 19:57:56 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.