PR/50822: David Binderman: Fix copy length.